--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Roboto Mono', monospace;
 }
 
+/* Impostazioni per il titolo */
 h2 {
     font-family: 'Roboto Mono', monospace;
     font-size: 24px;
@@ -51,19 +52,20 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Roboto Mono', monospace; /* Font modificato */
+    font-family: 'Roboto Mono', monospace;
     font-weight: bold;  /* Testo in grassetto */
 }
 
-/* Aggiungi margine tra la mappa e la lista */
-.container {
-    margin-top: 20px;
+/* Lista dei computer */
+#computerList {
+    padding-left: 0;
+    list-style-type: none;
 }
 
-/* Personalizza l'aspetto della lista numerata */
-#computerList {
+/* Lista numerata dei computer */
+#computerList li {
     font-family: 'Roboto Mono', monospace;
     font-size: 14px;
     color: #333;
+    margin-bottom: 10px;
 }
-
